@@ -1,6 +1,7 @@
 ver 0.18.8 (not yet released)
 * decoder
   - ffmpeg: support libav v10_alpha1
+* more robust Icy-Metadata parser
 * fix Solaris build failure
 
 ver 0.18.7 (2013/01/13)
